Bug 137916 - Report wizard doesn't open correctly
Summary: Report wizard doesn't open correctly
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-01 17:36 UTC by Julien Nabet
Modified: 2020-11-02 19:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.20 KB, text/plain)
2020-11-01 17:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2020-11-01 17:36:44 UTC
Description:
On pc Debian x86-64 with master sources updated today, report wizard doesn't open correctly, it open the same way as design report.

I noticed this on console:
java.lang.NullPointerException
	at com.sun.star.wizards.reportbuilder.layout.ReportBuilderLayouter.getTypeFromFieldName(ReportBuilderLayouter.java:491)
	at com.sun.star.wizards.reportbuilder.layout.ReportBuilderLayouter.insertFormattedField(ReportBuilderLayouter.java:735)
	at com.sun.star.wizards.reportbuilder.layout.ReportBuilderLayouter.insertFormattedField(ReportBuilderLayouter.java:723)
	at com.sun.star.wizards.reportbuilder.layout.ReportBuilderLayouter.insertPageHeader(ReportBuilderLayouter.java:1282)
	at com.sun.star.wizards.reportbuilder.layout.ReportBuilderLayouter.layout(ReportBuilderLayouter.java:137)
	at com.sun.star.wizards.reportbuilder.ReportBuilderImplementation.setPageOrientation(ReportBuilderImplementation.java:282)
	at com.sun.star.wizards.reportbuilder.ReportBuilderImplementation.getFrame(ReportBuilderImplementation.java:219)
	at com.sun.star.wizards.reportbuilder.ReportBuilderImplementation.getWizardParent(ReportBuilderImplementation.java:96)
	at com.sun.star.wizards.report.ReportWizard.startReportWizard(ReportWizard.java:458)
	at com.sun.star.wizards.report.CallReportWizard$ReportWizardImplementation.trigger(CallReportWizard.java:90)


Steps to Reproduce:
1. Launch Base
2. Create a brand new file HSQLDB embedded
3. Create a simple table
4. Click Report wizard

Actual Results:
No wizard

Expected Results:
Wizard should display


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.0.0.alpha1+
Build ID: 6e81dad4c2b23017cb0c996a4ab9a81e24fab16f
CPU threads: 12; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2020-11-01 17:40:22 UTC
I don't reproduce this with LO Debian package 7.0.2.2.

Using gen rendering doesn't change anything except a crash when closing the report window.

Robert: would you have some time to try to reproduce this? (it happens only on 7.1/master branch)
Comment 2 Julien Nabet 2020-11-01 17:45:53 UTC
Created attachment 166911 [details]
bt with debug symbols

The crash happens only with gen rendering + closing main window of report without closing the subwindow with fields.
Comment 3 Julien Nabet 2020-11-01 17:46:54 UTC
Caolán: thought you might have some thoughts here about the crash or about the fact the report wizard doesn't open.
Comment 4 Robert Großkopf 2020-11-01 20:13:57 UTC
Could confirm wizard for report builder in Base wouldn't open in LO 7.1.0.0 alpha1+ on OpenSUSE 15.1 64bit rpm Linux. 

But there is a difference between the normal design of a report. When trying to start with the wizard there will be content in the page header of the report: Title:
Author: (with my name ...)
Date:
Comment 5 Julien Nabet 2020-11-02 06:59:46 UTC
Thank you Robert for the confirmation.

I created a brand odb file with LO Debian package 7.0.2.2 with a simple table and a basic report.
Then I tried to open and edit with LO master sources, I got error message:
"unsatisfied query of interface of type com.sun.star.xml.sax.XDocumentHandler!/home/julien/lo/libreoffice/include/com/sun/star/uno/Reference.hxx:79

on console, I noticed these:
warn:legacy.osl:3995:3995:dbaccess/source/core/dataaccess/ModelImpl.cxx:773: ODatabaseModelImpl::getOrCreateRootStorage: no source to create the storage from!
warn:legacy.osl:3995:3995:dbaccess/source/core/dataaccess/ModelImpl.cxx:773: ODatabaseModelImpl::getOrCreateRootStorage: no source to create the storage from!
warn:legacy.osl:3995:3995:dbaccess/source/core/dataaccess/ModelImpl.cxx:773: ODatabaseModelImpl::getOrCreateRootStorage: no source to create the storage from!
warn:dbaccess:3995:3995:dbaccess/source/filter/xml/xmlComponent.cxx:69: unknown attribute http://www.w3.org/1999/xlink xlink:type=simple
warn:svl.items:3995:3995:svl/source/items/itempool.cxx:396: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
warn:legacy.osl:3995:3995:dbaccess/source/ui/dlg/sqlmessage.cxx:226: lcl_buildExceptionChain: useless exception: no state, no error code, no message!
warn:svl.items:3995:3995:svl/source/items/itempool.cxx:396: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
warn:legacy.osl:3995:3995:dbaccess/source/ui/dlg/sqlmessage.cxx:226: lcl_buildExceptionChain: useless exception: no state, no error code, no message!
Comment 6 Caolán McNamara 2020-11-02 11:31:43 UTC
With a bibisect a seem to see

commit fe2b4e7dc6533535736a8f08496f316427386179
Date:   Tue Oct 6 18:27:27 2020 +0200

    make SvXMLImport fast-parser only
    
    so I can simplify its logic and convert the rest of
    the context classes.

as where this stops working
Comment 7 Caolán McNamara 2020-11-02 16:00:21 UTC
I think things go wrong at

reportdesign/source/filter/xml/xmlfilter.cxx:236 at that
Reference< xml::sax::XDocumentHandler > xDocHandler...
line
Comment 8 Caolán McNamara 2020-11-02 16:25:45 UTC
https://gerrit.libreoffice.org/c/core/+/105190 makes it work again
Comment 9 Commit Notification 2020-11-02 19:48:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f821939c1d2befafda70a8e8c3ed88748ab75762

tdf#137916 get report xml importer working again

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2020-11-02 19:58:19 UTC
Great job! I confirm it works with master sources updated today.
I just noticed these:
warn:legacy.tools:8039:8039:toolkit/source/helper/unowrapper.cxx:174: UnoWrapper::SetWindowInterface: there already *is* a WindowInterface for this window!
warn:legacy.tools:8039:8039:toolkit/source/awt/vclxtoolkit.cxx:1951: VCLXToolkit::createWindow: did #133706# resurge?

but I'm pretty sure it was already there.

Thank you Caolán!