tdf#137916 get report xml importer working again

Change-Id: I238373bdfd35001c09a67b73cc38f5a96640e2ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105190
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Jenkins